add icon buttons and change header

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Matt Taylor</h1>
+								<!-- <p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p> -->
+								<p>
+									Software Engineer, lover of all things nerdy, and a lifelong learner.
+								</p>
 							</div>
 						</div>
 						<nav>
@@ -63,7 +66,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>I'm a curious, creative, puzzle-solver with a passion for learning anything and everything I can get my hands on. I am an enthusiastic teammate and a patient communicator. Software development, to me, is like modern day magic. All we have to do is write the correct words and we can do anything we can imagine, and I love that. My favorite languages to write my incantations are Python, React, Redux, Javascript, Postgres, Flask, HTML, CSS, Node, Sequelize, Express, Docker, Pug, and of course SQLAlchemy.</p>
 							</article>
 
 						<!-- Contact -->
@@ -90,10 +93,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/MatthewTaylor9758" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/matthew-taylor-3763ba1b8/" class="icon brands fa-linkedin"><span class="label">Facebook</span></a></li>
+									<li><a href="https://angel.co/u/matthew-taylor-56" class="icon brands fa-angellist"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
 
