make changes to work area

--- a/index.html
+++ b/index.html
@@ -50,23 +50,54 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>I'm a curious, creative, puzzle-solver with a passion for learning anything and everything I can get my hands on. I am an enthusiastic teammate and a patient communicator. Software development, to me, is like modern day magic. All we have to do is write the correct words and we can do anything we can imagine, and I love that. My favorite languages to write my incantations are Python, React, Redux, Javascript, Postgres, Flask, HTML, CSS, Node, Sequelize, Express, Docker, Pug, and of course SQLAlchemy.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">FFStockpile</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<div style="display: flex; justify-content: space-between;">
+									<a href="https://ffstockpile.herokuapp.com/">Live Link</a>
+									<a href="https://github.com/MatthewTaylor9758/Fantasy-Football-Capstone">Github</a>
+								</div>
+								<p>
+									FFStockpile is an app that is meant to be a place that fantasy football players can come to do research on players. They can come here and get the data they need to make the decisons they want.
+								</p>
+								<p>
+									This was made using React, Redux, SQLAlchemy, Flask, Javascript, HTML, CSS, Material UI, and PostgreSQL.
+								</p>
+								<h2 class="major">Jello</h2>
+								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<div style="display: flex; justify-content: space-between;">
+									<a href="https://jello-aa.herokuapp.com">Live Link</a>
+									<a href="https://github.com/woodsywisdom/Jello-app">Github</a>
+								</div>
+								<p>
+									This is a clone of the popular website Trello that I made with two other developers.
+								</p>
+								<p>
+									This was made using React, Redux, SQLAlchemy, Flask, Javascript, HTML, CSS, Material UI, and PostgreSQL.
+								</p>
+								<h2 class="major">Stack Overflow</h2>
+								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<div style="display: flex; justify-content: space-between;">
+									<a href="https://stackoverflow88.herokuapp.com/login">Live Link</a>
+									<a href="https://github.com/MatthewTaylor9758/Stack-Overflow-Clone">Github</a>
+								</div>
+								<p>
+									This is a clone of the fantastic website Stack Overflow that I made solo.
+								</p>
+								<p>
+									This was made using React, Redux, Express, Sequelize, Javascript, HTML, CSS, and PostgreSQL.
+								</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
+								<h2 class="major">Skills</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>I'm a curious, creative, puzzle-solver with a passion for learning anything and everything I can get my hands on. I am an enthusiastic teammate and a patient communicator. Software development, to me, is like modern day magic. All we have to do is write the correct words and we can do anything we can imagine, and I love that. My favorite languages to write my incantations are Python, React, Redux, Javascript, Postgres, Flask, HTML, CSS, Node, Sequelize, Express, Docker, Pug, and of course SQLAlchemy.</p>
+								<p></p>
 							</article>
 
 						<!-- Contact -->
