add project images

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">FFStockpile</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Screenshot_(89).png" alt="" /></span>
 								<div style="display: flex; justify-content: space-between;">
 									<a href="https://ffstockpile.herokuapp.com/">Live Link</a>
 									<a href="https://github.com/MatthewTaylor9758/Fantasy-Football-Capstone">Github</a>
@@ -68,7 +68,7 @@
 									This was made using React, Redux, SQLAlchemy, Flask, Javascript, HTML, CSS, Material UI, and PostgreSQL.
 								</p>
 								<h2 class="major">Jello</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Screenshot_(87).png" alt="" /></span>
 								<div style="display: flex; justify-content: space-between;">
 									<a href="https://jello-aa.herokuapp.com">Live Link</a>
 									<a href="https://github.com/woodsywisdom/Jello-app">Github</a>
@@ -80,7 +80,7 @@
 									This was made using React, Redux, SQLAlchemy, Flask, Javascript, HTML, CSS, Material UI, and PostgreSQL.
 								</p>
 								<h2 class="major">Stack Overflow</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Screenshot_(90).png" alt="" /></span>
 								<div style="display: flex; justify-content: space-between;">
 									<a href="https://stackoverflow88.herokuapp.com/login">Live Link</a>
 									<a href="https://github.com/MatthewTaylor9758/Stack-Overflow-Clone">Github</a>
