--- a/index.html
+++ b/index.html
@@ -96,8 +96,18 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">Skills</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p></p>
+								<ul class='icons'>
+									<li>
+										<div>
+											<a target='_blank' class='icon brands fab fa-js fa-3x'>
+
+											</a>
+											<p>
+												Javascript
+											</p>
+										</div>
+									</li>
+								</ul>
 							</article>
 
 						<!-- Contact -->
