add a few more icons

--- a/index.html
+++ b/index.html
@@ -102,8 +102,28 @@
 											<a target='_blank' class='icon brands fab fa-js fa-3x'>
 
 											</a>
-											<p>
+											<p style="font-family: 'Neutraface Text Bold';">
 												Javascript
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon brands fab fa-react fa-3x'>
+
+											</a>
+											<p>
+												React
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
 											</p>
 										</div>
 									</li>
