add a few more icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#about">Skills</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -99,8 +99,8 @@
 								<ul class='icons'>
 									<li>
 										<div>
-											<a target='_blank' class='icon brands fab fa-js fa-3x'>
-
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/logos:javascript.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p style="font-family: 'Neutraface Text Bold';">
 												Javascript
@@ -109,11 +109,151 @@
 									</li>
 									<li>
 										<div>
-											<a target='_blank' class='icon brands fab fa-react fa-3x'>
-
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/logos:react.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p>
 												React
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/logos:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/logos:python.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Python
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class="iconify icon" data-icon="ant-design:console-sql-outlined" data-inline="false">
+												<img src='https://api.iconify.design/ant-design:console-sql-outlined.svg?color=%23ffffff&width=64&height=92' />
+											</a>
+											<p>
+												SQL
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/logos:postgresql.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												PostgreSQL
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/vscode-icons:file-type-html.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												HTML5
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
+											</p>
+										</div>
+									</li>
+									<li>
+										<div>
+											<a target='_blank' class='icon'>
+												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+											</a>
+											<p>
+												Redux
 											</p>
 										</div>
 									</li>
