finish adding skill icons

--- a/index.html
+++ b/index.html
@@ -170,100 +170,100 @@
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img src='https://api.iconify.design/vscode-icons:file-type-css.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p>
-												Redux
+												CSS3
 											</p>
 										</div>
 									</li>
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img src='https://api.iconify.design/la:node.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p>
-												Redux
+												Node.js
 											</p>
 										</div>
 									</li>
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img src='https://api.iconify.design/cib:flask.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p>
-												Redux
+												Flask
 											</p>
 										</div>
 									</li>
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img src='https://api.iconify.design/logos:sequelize.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p>
-												Redux
+												Sequelize
 											</p>
 										</div>
 									</li>
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img style="width: 4em; height: auto;" src='https://expressjs.com/images/express-facebook-share.png' />
 											</a>
 											<p>
-												Redux
+												Express.js
 											</p>
 										</div>
 									</li>
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img src='https://api.iconify.design/logos:git-icon.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p>
-												Redux
+												Git
 											</p>
 										</div>
 									</li>
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img style="width: 4em; height: auto;" src='https://www.fullstackpython.com/img/logos/sqlalchemy.jpg' />
 											</a>
 											<p>
-												Redux
+												SQLAlchemy
 											</p>
 										</div>
 									</li>
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img src='https://api.iconify.design/logos:docker-icon.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p>
-												Redux
+												Docker
 											</p>
 										</div>
 									</li>
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img src='https://api.iconify.design/vscode-icons:file-type-pug.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p>
-												Redux
+												Pug
 											</p>
 										</div>
 									</li>
 									<li>
 										<div>
 											<a target='_blank' class='icon'>
-												<img src='https://api.iconify.design/cib:redux.svg?color=%23ffffff&width=64&height=112' />
+												<img src='https://api.iconify.design/logos:material-ui.svg?color=%23ffffff&width=64&height=112' />
 											</a>
 											<p>
-												Redux
+												Material UI
 											</p>
 										</div>
 									</li>
