add more info and copyright to work page

--- a/index.html
+++ b/index.html
@@ -67,17 +67,24 @@
 								<p>
 									This was made using React, Redux, SQLAlchemy, Flask, Javascript, HTML, CSS, Material UI, and PostgreSQL.
 								</p>
+								<p>
+									- Copyright 2020 Matthew Taylor
+								</p>
 								<h2 class="major">Jello</h2>
 								<span class="image main"><img src="images/Screenshot_(87).png" alt="" /></span>
 								<div style="display: flex; justify-content: space-between;">
-									<a href="https://jello-aa.herokuapp.com">Live Link</a>
-									<a href="https://github.com/woodsywisdom/Jello-app">Github</a>
+									<a href="https://jello1.herokuapp.com/">Live Link</a>
+									<a href="https://github.com/MatthewTaylor9758/Jello-app">Github</a>
 								</div>
 								<p>
-									This is a clone of the popular website Trello that I made with two other developers.
+									Trello is a popular app for staying organized and keeping track of tasks throughout their lifecycle.
+									This is a clone of Trello that I made with two other developers.
 								</p>
 								<p>
 									This was made using React, Redux, SQLAlchemy, Flask, Javascript, HTML, CSS, Material UI, and PostgreSQL.
+								</p>
+								<p>
+									- Copyright 2020 Matthew Taylor
 								</p>
 								<h2 class="major">Stack Overflow</h2>
 								<span class="image main"><img src="images/Screenshot_(90).png" alt="" /></span>
@@ -86,10 +93,15 @@
 									<a href="https://github.com/MatthewTaylor9758/Stack-Overflow-Clone">Github</a>
 								</div>
 								<p>
-									This is a clone of the fantastic website Stack Overflow that I made solo.
+									Stack Overflow is a popular and fantastic website for asking technical questions,
+									 having people in the community answer them, rate questions and answers, etc.
+									This is a clone of Stack Overflow that I made solo.
 								</p>
 								<p>
 									This was made using React, Redux, Express, Sequelize, Javascript, HTML, CSS, and PostgreSQL.
+								</p>
+								<p>
+									- Copyright 2020 Matthew Taylor
 								</p>
 							</article>
 
