--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<!-- <span class="icon fa-gem" style="display: block;"></span> -->
+							<img src='images/20210113_181806.jpg'>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -28,7 +29,7 @@
 								<!-- <p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p> -->
 								<p>
-									Software Engineer, lover of all things nerdy, and a lifelong learner.
+									Software Engineer, a lifelong learner, and lover of all things nerdy.
 								</p>
 							</div>
 						</div>
