--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header">
 						<div class="logo">
 							<!-- <span class="icon fa-gem" style="display: block;"></span> -->
-							<img src='images/20210113_181806.jpg'>
+							<img id='profile-pic' src='images/20210113_181806.jpg'>
 						</div>
 						<div class="content">
 							<div class="inner">
